fix liro hdfview image link

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
@@ -106,7 +106,7 @@
     "<figure>\n",
     "    <a href=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/py-figs/hyperspectral-refl-brdf-intro/brdf_correction_rmse.png\">\n",
     "    <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/py-figs/hyperspectral-refl-brdf-intro/brdf_correction_rmse.png\"></a>\n",
-    "    <figcaption> Example dataset showing the a. original and b. BRDF-corrected datasets at the NEON CPER site; c. shows the difference in RMSE between the data processed with and without the BRDF correction.  \n",
+    "    <figcaption> Example dataset showing the a) original and b) BRDF-corrected datasets at the NEON CPER site; c) shows the difference in RMSE between the data processed with and without the BRDF correction.  \n",
     "    </figcaption>\n",
     "</figure>\n",
     "\n",
@@ -115,7 +115,7 @@
     "If you're working with the bidirectional reflectance data for the first time, we encourage you to start by exploring the HDF5 file in HDFView, a free softwar programe that can be downloaded from the <a href=\"https://www.hdfgroup.org/downloads/hdfview/\" target=\"_blank\">HDF Group Download Page</a>. This provides a more interactive way to view the contents of the hdf5 files. The figure below shows a DP3.30006.002 and DP3.30006.001 file in HDFView for comparison.\n",
     "\n",
     "<table><tr>\n",
-    "<td> <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/py-figs/hyperspectral-refl-brdf-introlliroO_rdfl_reflhdfview.png\" width=\"500\"> </td>\n",
+    "<td> <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/py-figs/hyperspectral-refl-brdf-intro/liro_brdf_refl_hdfview.png\" width=\"500\"> </td>\n",
     "<td> <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/py-figs/hyperspectral-refl-brdf-intro/serc_dir_refl_hdfview.png\" width=\"500\"> </td>\n",
     "</table>\n",
     "<figcaption> HDFView of the new DP3.30006.002 (left) and original DP3.30006.001 (right). Highlighted fields on the left image indicate new or updated fields in the .002 revision.\n",
