--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
@@ -112,7 +112,7 @@
     "\n",
     "## Changes to Bidirectional Reflectance HDF5 Files\n",
     "\n",
-    "If you're working with the bidirectional reflectance data for the first time, we encourage you to start by exploring the HDF5 file in HDFView, a free softwar programe that can be downloaded from the <a href=\"https://www.hdfgroup.org/downloads/hdfview/\" target=\"_blank\">HDF Group Download Page</a>. This provides a more interactive way to view the contents of the hdf5 files. The figure below shows a DP3.30006.002 and DP3.30006.001 file in HDFView for comparison.\n",
+    "If you're working with the bidirectional reflectance data for the first time, we encourage you to start by exploring the HDF5 file in HDFView, a free software program that can be downloaded from the <a href=\"https://www.hdfgroup.org/downloads/hdfview/\" target=\"_blank\">HDF Group Download Page</a>. This provides a more interactive way to view the contents of the hdf5 files. The figure below shows a DP3.30006.002 and DP3.30006.001 file in HDFView for comparison.\n",
     "\n",
     "<table><tr>\n",
     "<td> <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/py-figs/hyperspectral-refl-brdf-intro/liro_brdf_refl_hdfview.png\" width=\"500\"> </td>\n",
@@ -124,7 +124,7 @@
     "As you can see, there are some differences in the HDF5 structure between the .001 (directional) and .002 (bidirectional) datasets. The major changes are summarized below, with additional details outlined in the table.\n",
     "\n",
     "1. Addition of an `Acquisition Date` Ancillary Image.\n",
-    "2. Updated `eWather Quality Index` Ancillary Image.\n",
+    "2. Updated `Weather Quality Index` Ancillary Image.\n",
     "3. Updated Logs to use file names from the L1 reflectance, including the flight line #, with addition of the raw file name to the top level.\n",
     "4. Consistency in fields for Ancillary Rasters.\n",
     "5. Consistency in NO DATA values across Ancillary Rasters.\n",
