--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
@@ -137,7 +137,7 @@
     "| Logs | Log file names reflect the Flight Line #, corresonding to the L1 Reflectance Tile | Log file names reflect the time stamp of the flight line |\n",
     "| Logs | BRDF logs added (BRDF_COEFFS_JSON_for_Hytools and BRDF_Config_JSON_for_Hytools) | No BRDF logs |\n",
     "\n",
-    "Now that you have a high-level picture of what has change between the directional and bidirectional reflectance revisionsd, let's take amore detailed  look at th contents of thee bidirectional reflectance data in Python. \n",
+    "Now that you have a high-level picture of what has changed between the directional and bidirectional reflectance revisions, let's take a more detailed look at the contents of the bidirectional reflectance data in Python. \n",
     "\n",
     "In Python, you can look inside the HDF5 dataset with the `h5py visititems` function. The `list_dataset` function defined below displays all datasets stored in the hdf5 file and their locations within the hdf5 file:"
    ]
@@ -515,7 +515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function below pulls out some spatial information about the dataset that will come in handy for plotting. Please refer to the ... lesson for more details about this spatial information."
+    "The function below pulls out some spatial information about the dataset that will come in handy for plotting."
    ]
   },
   {
