fix token in by_tile_aop

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
@@ -280,7 +280,7 @@
     "            northing=5097001,\n",
     "            include_provisional=True,\n",
     "            savepath='./data',\n",
-    "            token=os.environ.get(\"NEON_TOKEN\"))"
+    "            token=NEON_TOKEN)"
    ]
   },
   {
