--- a/tutorials/R/Geospatial-skills/intro-raster-r/03-Raster-Calculations-In-R/03-Raster-Calculations-In-R.Rmd
+++ b/tutorials/R/Geospatial-skills/intro-raster-r/03-Raster-Calculations-In-R/03-Raster-Calculations-In-R.Rmd
@@ -327,7 +327,7 @@ Data are often more interesting and powerful when we compare them across various
 locations. Let's compare some data collected over Harvard Forest to data
 collected in Southern California. The 
 <a href="https://www.neonscience.org/field-sites/SJER" target="_blank" >NEON San Joaquin Experimental Range (SJER) field site </a> 
-located in Southern California has a very different ecosystem and climate than
+located in Southern California has a very different ecosystem and weather than
 the
 <a href="https://www.neonscience.org/field-sites/HARV" target="_blank" >NEON Harvard Forest Field Site</a>
 in Massachusetts.  
