--- a/tutorials/R/soils/soil-sensors-intro/soilTemperatureMoistureCO2.Rmd
+++ b/tutorials/R/soils/soil-sensors-intro/soilTemperatureMoistureCO2.Rmd
@@ -28,7 +28,7 @@ data products to investigate controls on soil CO<sub>2</sub> concentrations:
 
 <a href="https://data.neonscience.org/data-products/DP1.00041.001" target="_blank">Soil temperature</a>, <a href="https://data.neonscience.org/data-products/DP1.00094.001" target="_blank">soil water content</a>, and <a href="https://data.neonscience.org/data-products/DP1.00095.001" target="_blank">soil CO<sub>2</sub> concentration</a> are measured in each of the five sensor-based soil plots at each NEON terrestrial site. Vertical profiles of soil temperature (up to 9 measurement levels per plot) and soil water content (up to 8 levels) are measured from near the soil surface down to 2 m deep or restrictive feature if shallower. Soil CO<sub>2</sub> concentrations are measured at three different surface soil depths, typically <20 cm deep. Within each soil plot all these measurements are made within a few meters of one-another.
 
-We will be using data from the <a href="https://www.neonscience.org/field-sites/srer" target="_blank">Santa Rita Experimental Range</a> (SRER) site in Arizona. The site is in the Sonoran Desert and is characterized by a semi-arid, hot climate. Winters are short and mild, while summers are long and hot.
+We will be using data from the <a href="https://www.neonscience.org/field-sites/srer" target="_blank">Santa Rita Experimental Range</a> (SRER) site in Arizona. The site is in the Sonoran Desert. Winters are short and mild, while summers are long and hot.
 
 <div id="ds-objectives" markdown="1">
 
@@ -77,7 +77,7 @@ for the `neonUtilities` package for more details if desired.
 
 Note that this will download files totaling approximately 200 MB. If this is too large for your computer or internet connection you can reduce the date range and continue with the rest of the tutorial (e.g., startdate = 2021-06 and enddate = 2021-08; approximately 50 MB).
 
-```{r soildata, results="hide"}
+```{r soildata, results="hide", message=FALSE}
 
 st <- loadByProduct(dpID="DP1.00041.001",
                     startdate="2021-01",
@@ -197,7 +197,7 @@ legend("topleft", legend="6 cm", lty=1, bty="n")
 
 ```
 
-That's better. Soil water content shows typical patterns of sharp rises in moisture (presumably from rain events) followed by gradual declines as the soil dries. Soil moisture has a bimodal distribution being higher during winter and late summer, which is consistent with the climate at SRER with winter rain as well as late summer thunderstorms.
+That's better. Soil water content shows typical patterns of sharp rises in moisture (presumably from rain events) followed by gradual declines as the soil dries. Soil moisture has a bimodal distribution being higher during winter and late summer, which is consistent with meteorology at SRER with winter rain as well as late summer thunderstorms.
 
 ## 5. Soil CO<sub>2</sub> concentration
 
