fix intro section that had copied material from a different leson

--- a/tutorials/R/AOP/Lidar/lidar-uncertainty/lidar_raster_uncertainty.Rmd
+++ b/tutorials/R/AOP/Lidar/lidar-uncertainty/lidar_raster_uncertainty.Rmd
@@ -16,7 +16,7 @@ urlTitle: lidar-uncertainty-r
 ---
 
 
-In 2016 the NEON AOP flew the PRIN site in D11 on a poor weather day to ensure coverage of the site. The following day, the weather improved and the site was flown again to collect clear-weather spectrometer data. Having collections only one day apart provides an opportunity to assess LiDAR uncertainty because we expect that nothing has changed at the site between the two collections. In this exercise we will analyze several NEON Level 3 lidar rasters to assess the uncertainty.
+In 2016 the NEON AOP flew the PRIN site in D11 on a poor weather day to ensure coverage of the site. The following day, the weather improved and the site was flown again to collect clear-weather spectrometer data. Having collections only one day apart provides an opportunity to assess lidar uncertainty because we expect that nothing has changed at the site between the two collections. In this exercise we will analyze several NEON Level 3 lidar rasters to assess the uncertainty.
 
 In this exercise we will analyze several NEON Level-3 lidar rasters (DSM, DTM, and CHM) 
 and assess the uncertainty between data collected over the same area on different days, collected a day apart.
@@ -50,9 +50,8 @@ on your computer to complete this tutorial.
 
 Lidar raster data are downloaded using the R `neonUtilities::byTileAOP` function in the script.
 
-These remote sensing data files provide information on the vegetation at the 
-<a href="https://www.neonscience.org/" target="_blank"> National Ecological Observatory Network's</a> 
-<a href="https://www.neonscience.org/field-sites/PRIN" target="_blank"> Pringle Creek</a> in Texas.
+These remote sensing data files provide information on the vegetation at NEON's
+<a href="https://www.neonscience.org/field-sites/PRIN" target="_blank"> Pringle Creek (PRIN)</a> site in Texas.
 The complete datasets can be downloaded using `neonUtilities::byFileAOP`, or accessed from the 
 <a href="http://data.neonscience.org" target="_blank"> NEON Data Portal</a>.
 
@@ -65,8 +64,7 @@ created by unzipping this file.
 **Set Working Directory:** This lesson will walk you through setting the working 
 directory before downloading the datasets from neonUtilities.
 
-<a href="https://www.neonscience.org/set-working-directory-r" target="_blank"> An overview
-of setting the working directory in R can be found here.</a>
+An overview of setting the working directory in R can be found <a href="https://www.neonscience.org/set-working-directory-r" target="_blank">here</a>.
 
 **R Script & Challenge Code:** NEON data lessons often contain challenges to reinforce 
 skills. If available, the code for challenge solutions is found in the downloadable R 
@@ -81,29 +79,16 @@ What is a CHM, DSM and DTM? About Gridded, Raster LiDAR Data</a>
 
 </div>
 
-## Create a lidar-derived Canopy Height Model (CHM)
 
-The National Ecological Observatory Network (NEON) will provide lidar-derived 
-data products as one of its many free ecological data products. These products 
-will come in the 
-<a href="http://trac.osgeo.org/geotiff/" target="_blank">GeoTIFF</a> 
-format, which is a .tif raster format that is spatially located on the earth. 
-
-In this tutorial, we create a Canopy Height Model. The 
-<a href="https://www.neonscience.org/chm-dsm-dtm-gridded-lidar-data" target="_blank">Canopy Height Model (CHM)</a>,
-represents the heights of the trees on the ground. We can derive the CHM 
-by subtracting the ground elevation from the elevation of the top of the surface 
-(or the tops of the trees). 
-
-We will use the `terra` R package to work with the the lidar-derived Digital 
-Surface Model (DSM) and the Digital Terrain Model (DTM). 
+Let's get started! First, we will load the required packages. We will use the 
+`terra` R package to work with the the lidar-derived rasters: the Digital Surface 
+Model (DSM), Digital Terrain Model (DTM), and Canopy Height Model (CHM).
 
 ```{r load-libraries, message=FALSE, warning=FALSE}
 
 # Load needed packages
 library(terra)
 library(neonUtilities)
-library(ggplot2)
 ```
 
 Set the working directory so you know where to download data.
@@ -114,7 +99,9 @@ wd="~/data/" #This will depend on your local environment
 setwd(wd)
 ```
 
-We can use the `neonUtilities` function `byTileAOP` to download a single DTM and DSM tile at PRIN. Both the DTM and DSM are delivered under the <a href="https://data.neonscience.org/data-products/DP3.30024.001" target="_blank">Elevation - LiDAR (DP3.30024.001)</a> data product.
+We can use the `neonUtilities` function `byTileAOP` to download a single CHM, DTM, and DSM tile at PRIN. 
+The CHM is delivered under the <a href="https://data.neonscience.org/data-products/DP3.30015.001" target="_blank">Ecosystem Structure (DP3.30015.001)</a> data product. Both the DTM and DSM are delivered 
+under the <a href="https://data.neonscience.org/data-products/DP3.30024.001" target="_blank">Elevation - LiDAR (DP3.30024.001)</a> data product.
 
 You can run `help(byTileAOP)` to see more details on what the various inputs are. For this exercise, we'll specify the UTM Easting and Northing to be (607000, 3696000), which will download the tile with the lower left corner (607000, 3696000). By default, the function will check the size total size of the download and ask you whether you wish to proceed (y/n). You can set `check.size=FALSE` if you want to download without a prompt. This example will not be very large (~8MB), since it is only downloading two single-band rasters (plus some associated metadata).
 
