--- a/tutorials/R/AOP/Lidar/lidar-uncertainty/lidar_raster_uncertainty.Rmd
+++ b/tutorials/R/AOP/Lidar/lidar-uncertainty/lidar_raster_uncertainty.Rmd
@@ -28,11 +28,12 @@ and assess the uncertainty between data collected over the same area on differen
 
 After completing this tutorial, you will be able to:
 
-* Load several L3 Lidar tif files
-* Difference the tif files
-* Create histograms of the DSM, DTM, and CHM differences
-* Remove vegetated areas of DSM & DTMs using the CHM
+* Download and read in several L3 lidar geotiff files
+* Difference lidar raster geotiff files
+* Create histograms raster differences (DTM and DSM)
+* Mask out vegetated areas of DSM & DTMs using the CHM
 * Compare difference in DSM and DTMs over vegetated and ground pixels
+* Use this approach as a framework for understanding lidar raster uncertainty
 
  
 ## Things You’ll Need To Complete This Tutorial
@@ -428,6 +429,6 @@ Repeat this analysis for a site that was flown twice in the same year, but with 
 
 * 2023 SOAP (Visit 6: Riegl Q780, Visit 7: Optech Galaxy Prime)
 
-Tip: You may wish to read this FAQ: Have AOP sensors changed over the years? How do different sensors affect the data? This discusses the differences between lidar sensors that NEON AOP operates, and some of the implications for the data products derived from the lidar sensor.
+Tip: You may wish to read this <a href="https://www.neonscience.org/about/faq" target="_blank">NEON FAQ</a>: *Have AOP sensors changed over the years? How do different sensors affect the data?* This discusses the differences between lidar sensors that NEON AOP operates, and some of the implications for the data products derived from the lidar sensor.
 
 </div>
